--- a/index.html
+++ b/index.html
@@ -1,48 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata dan Proyek</title>
-    <link rel="stylesheet" href="mystyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
+<html>
 <body>
-    <header class="header">
-        <h1>Biodata dan Proyek</h1>
-    </header>
-    
-    <div class="container">
-        <!-- Biodata Section -->
-        <section class="biodata">
-            <h2>Biodata</h2>
-            <p><strong>Nama:</strong> Abdul Aziz Rantizi</p>
-            <p><strong>NPM:</strong> 140810230038</p>
-            <p><strong>Jurusan:</strong> Teknik Informatika</p>
-            <p><strong>Semester:</strong> 3</p>
-        </section>
-
-        <!-- Tugas Section -->
-        <section class="proyek">
-            <h2>Tugas yang Sudah Dikerjakan</h2>
-            <ul>
-                <li>
-                    <a href="pemrograman-web/tugas/tugas-1-HTML/biodata.html" target="_blank"><strong>Tugas 1:</strong></a> 
-                    HTML.
-                </li>
-                <li>
-                    <a href="pemrograman-web/tugas/tugas-2-CSS/biodata.html" target="_blank"><strong>Tugas 2:</strong></a> 
-                    CSS.
-                </li>
-                <li>
-                    <a href="pemrograman-web/tugas/tugas-3-Javascript/kalkulator.html" target="_blank"><strong>Tugas 3:</strong></a> 
-                    Javascript.
-                </li>
-            </ul>
-        </section>
-
-    <footer class="footer">
-        <p>&copy; 2024 Abdul Rantizi. All Rights Reserved.</p>
-    </footer>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
