--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
                     <a href="pemrograman-web/tugas/tugas-2-CSS/biodata.html" target="_blank"><strong>Tugas 2:</strong></a> 
                     CSS.
                 </li>
-                <li>
-                    <a href="pemrograman-web/tugas/tugas-3-Javascript/kalkulator.html" target="_blank"><strong>Tugas 3:</strong></a> 
+                <li><strong>Tugas 3:</strong>
                     Javascript.
                 </li>
+                <ul>
+                    <li>
+                        <a href="pemrograman-web/tugas/tugas-3-Javascript/konversi.html" target="_blank">a. Konversi Bilangan ke Huruf</a>
+                    </li>
+                    <li>
+                        <a href="pemrograman-web/tugas/tugas-3-Javascript/kalkulator.html" target="_blank">b. Kalkulator Sederhana</a>
+                    </li>
+                </ul>
             </ul>
         </section>
 
