--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
                 <li>
-                    <a href="pemrograman-web/tugas/tugas-2-CSS/biodata.html" target="_blank"><strong>Tugas 4:</strong></a> 
+                    <a href="https://github.com/rantizi/rantizi.github.io/tree/9d187c37e045b7ab34c645345197431cd50d60d8/pemrograman-web/tugas/tugas-4-PHP" target="_blank"><strong>Tugas 4:</strong></a> 
                     PHP.
                 </li>
             </ul>
