--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <a href="https://github.com/rantizi/rantizi.github.io/tree/9d187c37e045b7ab34c645345197431cd50d60d8/pemrograman-web/tugas/tugas-4-PHP" target="_blank"><strong>Tugas 4:</strong></a> 
                     PHP.
                 </li>
+                <li>
+                    <a href="https://github.com/rantizi/rantizi.github.io/tree/0821c00ac0ffe1bad730f9f112281b1fad1845b6/pemrograman-web/tugas/tugas-5-PHP-Mysql" target="_blank"><strong>Tugas 5:</strong></a> 
+                    PHP Mysql.
+                </li>
             </ul>
         </section>
 
