--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                     PHP.
                 </li>
                 <li>
-                    <a href="https://github.com/rantizi/rantizi.github.io/tree/0821c00ac0ffe1bad730f9f112281b1fad1845b6/pemrograman-web/tugas/tugas-5-PHP-Mysql" target="_blank"><strong>Tugas 5:</strong></a> 
+                    <a href="https://github.com/rantizi/PemrogramanWeb-tugas5" target="_blank"><strong>Tugas 5:</strong></a> 
                     PHP Mysql.
+                </li>
+                <li>
+                    <a href="https://github.com/rantizi/PemrogramanWeb-tugas6" target="_blank"><strong>Tugas 6:</strong></a> 
+                    Sessions and Cookies.
                 </li>
             </ul>
         </section>
