--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                     <a href="https://github.com/rantizi/PemrogramanWeb-tugas6" target="_blank"><strong>Tugas 6:</strong></a> 
                     Sessions and Cookies.
                 </li>
+                <li>
+                    <a href="https://github.com/rantizi/PemrogramanWeb-tugas6" target="_blank"><strong>Tugas 7:</strong></a> 
+                    CRUD Login.
+                </li>
             </ul>
         </section>
 
