--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Sessions and Cookies.
                 </li>
                 <li>
-                    <a href="https://github.com/rantizi/PemrogramanWeb-tugas6" target="_blank"><strong>Tugas 7:</strong></a> 
+                    <a href="https://github.com/rantizi/rantizi.github.io/tree/c5dcb3496d37cfc584a05659c8a606ca4f775567/pemrograman-web/tugas/tugas-7-CRUD" target="_blank"><strong>Tugas 7:</strong></a> 
                     CRUD Login.
                 </li>
             </ul>
